IPLL/Group_17_AS05/y.output
Nonterminals useless in grammar

    identifier_opt
    enumerator_list
    enumerator


Terminals unused in grammar

    INVALID_TOKEN


Rules useless in grammar

  146 identifier_opt: IDENTIFIER
  147               | ε

  148 enumerator_list: enumerator
  149                | enumerator_list COMMA enumerator

  150 enumerator: IDENTIFIER
  151           | IDENTIFIER ASSIGNMENT constant_expression


Rules useless in parser due to conflicts

   88 direct_declarator: direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET


State 74 conflicts: 1 shift/reduce
State 75 conflicts: 11 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | CHARACTER_CONSTANT
    4                   | STRING_LITERAL
    5                   | LEFT_PARENTHESES expression RIGHT_PARENTHESES

    6 postfix_expression: primary_expression
    7                   | postfix_expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    8                   | postfix_expression LEFT_PARENTHESES argument_expression_list_opt RIGHT_PARENTHESES
    9                   | postfix_expression ARROW IDENTIFIER
   10                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
   11                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

   12 argument_expression_list_opt: argument_expression_list
   13                             | ε

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list COMMA assignment_expression

   16 unary_expression: postfix_expression
   17                 | unary_operator cast_expression

   18 unary_operator: BITWISE_AND
   19               | ASTERISK
   20               | PLUS
   21               | MINUS
   22               | TILDE
   23               | EXCLAMATION

   24 cast_expression: unary_expression
   25                | LEFT_PARENTHESES type_name RIGHT_PARENTHESES cast_expression

   26 multiplicative_expression: cast_expression
   27                          | multiplicative_expression ASTERISK cast_expression
   28                          | multiplicative_expression SLASH cast_expression
   29                          | multiplicative_expression MODULO cast_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression PLUS multiplicative_expression
   32                    | additive_expression MINUS multiplicative_expression

   33 shift_expression: additive_expression

   34 relational_expression: shift_expression
   35                      | relational_expression LESS_THAN shift_expression
   36                      | relational_expression GREATER_THAN shift_expression
   37                      | relational_expression LESS_EQUAL_THAN shift_expression
   38                      | relational_expression GREATER_EQUAL_THAN shift_expression

   39 equality_expression: relational_expression
   40                    | equality_expression EQUALS relational_expression
   41                    | equality_expression NOT_EQUALS relational_expression

   42 AND_expression: equality_expression
   43               | AND_expression BITWISE_AND equality_expression

   44 exclusive_OR_expression: AND_expression
   45                        | exclusive_OR_expression BITWISE_XOR AND_expression

   46 inclusive_OR_expression: exclusive_OR_expression
   47                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   48 M: ε

   49 N: ε

   50 logical_AND_expression: inclusive_OR_expression
   51                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   52 logical_OR_expression: logical_AND_expression
   53                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   54 conditional_expression: logical_OR_expression
   55                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression assignment_operator assignment_expression

   58 assignment_operator: ASSIGNMENT

   59 expression: assignment_expression
   60           | expression COMMA assignment_expression

   61 constant_expression: conditional_expression

   62 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   63 init_declarator_list_opt: init_declarator_list
   64                         | ε

   65 declaration_specifiers: type_specifier declaration_specifiers_opt
   66                       | function_specifier declaration_specifiers_opt

   67 declaration_specifiers_opt: declaration_specifiers
   68                           | ε

   69 init_declarator_list: init_declarator
   70                     | init_declarator_list COMMA init_declarator

   71 init_declarator: declarator
   72                | declarator ASSIGNMENT initialiser

   73 type_specifier: VOIDTYPE
   74               | CHARTYPE
   75               | INTTYPE

   76 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt

   77 specifier_qualifier_list_opt: specifier_qualifier_list
   78                             | ε

   79 function_specifier: INLINE

   80 declarator: pointer direct_declarator
   81           | direct_declarator

   82 change_scope: ε

   83 direct_declarator: IDENTIFIER
   84                  | LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   85                  | direct_declarator LEFT_SQUARE_BRACKET INTEGER_CONSTANT RIGHT_SQUARE_BRACKET
   86                  | direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   87                  | direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   88                  | direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   89                  | direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   90                  | direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   91                  | direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

   92 type_qualifier_list_opt: ε

   93 pointer: ASTERISK type_qualifier_list_opt
   94        | ASTERISK type_qualifier_list_opt pointer

   95 parameter_type_list: parameter_list

   96 parameter_list: parameter_declaration
   97               | parameter_list COMMA parameter_declaration

   98 parameter_declaration: declaration_specifiers declarator
   99                      | declaration_specifiers

  100 identifier_list: IDENTIFIER
  101                | identifier_list COMMA IDENTIFIER

  102 type_name: specifier_qualifier_list

  103 initialiser: assignment_expression
  104            | LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
  105            | LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

  106 initialiser_list: designation_opt initialiser
  107                 | initialiser_list COMMA designation_opt initialiser

  108 designation_opt: designation
  109                | ε

  110 designation: designator_list ASSIGNMENT

  111 designator_list: designator
  112                | designator_list designator

  113 designator: LEFT_SQUARE_BRACKET constant_expression RIGHT_SQUARE_BRACKET

  114 statement: labeled_statement
  115          | compound_statement
  116          | expression_statement
  117          | selection_statement
  118          | iteration_statement
  119          | jump_statement

  120 labeled_statement: IDENTIFIER COLON statement

  121 change_block: ε

  122 compound_statement: LEFT_CURLY_BRACKET change_block change_scope block_item_list_opt RIGHT_CURLY_BRACKET

  123 block_item_list_opt: block_item_list
  124                    | ε

  125 block_item_list: block_item
  126                | block_item_list M block_item

  127 block_item: declaration
  128           | statement

  129 expression_statement: expression_opt SEMI_COLON

  130 expression_opt: expression
  131               | ε

  132 selection_statement: IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N
  133                    | IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N ELSE M statement

  134 iteration_statement: FOR LEFT_PARENTHESES expression_opt SEMI_COLON M expression_opt SEMI_COLON M expression_opt N RIGHT_PARENTHESES M statement
  135                    | FOR LEFT_PARENTHESES declaration expression_opt SEMI_COLON expression_opt RIGHT_PARENTHESES statement

  136 jump_statement: RETURN expression_opt SEMI_COLON

  137 translation_unit: external_declaration
  138                 | translation_unit external_declaration

  139 external_declaration: function_definition
  140                     | declaration

  141 function_definition: declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

  142 declaration_list_opt: declaration_list
  143                     | ε

  144 declaration_list: declaration
  145                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CHARTYPE (258) 74
    ELSE (259) 133
    FOR (260) 134 135
    IF (261) 132 133
    INLINE (262) 79
    INTTYPE (263) 75
    RETURN (264) 136
    VOIDTYPE (265) 73
    IDENTIFIER <symbol> (266) 1 9 83 100 101 120
    INTEGER_CONSTANT <intVal> (267) 2 85
    CHARACTER_CONSTANT <charVal> (268) 3
    STRING_LITERAL <stringVal> (269) 4
    LEFT_SQUARE_BRACKET (270) 7 85 86 87 88 113
    SLASH (271) 28
    QUESTION_MARK (272) 55
    ASSIGNMENT (273) 58 72 110
    COMMA (274) 11 15 60 70 97 101 105 107
    RIGHT_SQUARE_BRACKET (275) 7 85 86 87 88 113
    LEFT_PARENTHESES (276) 5 8 10 11 25 84 89 90 91 132 133 134 135
    LEFT_CURLY_BRACKET (277) 10 11 104 105 122 141
    RIGHT_CURLY_BRACKET (278) 10 11 104 105 122 141
    ARROW (279) 9
    ASTERISK (280) 19 27 93 94
    PLUS (281) 20 31
    MINUS (282) 21 32
    TILDE (283) 22
    EXCLAMATION (284) 23
    MODULO (285) 29
    LESS_THAN (286) 35
    GREATER_THAN (287) 36
    LESS_EQUAL_THAN (288) 37
    GREATER_EQUAL_THAN (289) 38
    COLON (290) 55 120
    SEMI_COLON (291) 62 129 134 135 136
    RIGHT_PARENTHESES (292) 5 8 10 11 25 84 89 90 91 132 133 134 135
    BITWISE_AND (293) 18 43
    EQUALS (294) 40
    BITWISE_XOR (295) 45
    BITWISE_OR (296) 47
    LOGICAL_AND (297) 51
    LOGICAL_OR (298) 53
    NOT_EQUALS (299) 41
    INVALID_TOKEN (300)
    THEN (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    primary_expression <expression> (48)
        on left: 1 2 3 4 5
        on right: 6
    postfix_expression <array> (49)
        on left: 6 7 8 9 10 11
        on right: 7 8 9 16
    argument_expression_list_opt <parameterCount> (50)
        on left: 12 13
        on right: 8
    argument_expression_list <parameterCount> (51)
        on left: 14 15
        on right: 12 15
    unary_expression <array> (52)
        on left: 16 17
        on right: 24 57
    unary_operator <unaryOperator> (53)
        on left: 18 19 20 21 22 23
        on right: 17
    cast_expression <array> (54)
        on left: 24 25
        on right: 17 25 26 27 28 29
    multiplicative_expression <expression> (55)
        on left: 26 27 28 29
        on right: 27 28 29 30 31 32
    additive_expression <expression> (56)
        on left: 30 31 32
        on right: 31 32 33
    shift_expression <expression> (57)
        on left: 33
        on right: 34 35 36 37 38
    relational_expression <expression> (58)
        on left: 34 35 36 37 38
        on right: 35 36 37 38 39 40 41
    equality_expression <expression> (59)
        on left: 39 40 41
        on right: 40 41 42 43
    AND_expression <expression> (60)
        on left: 42 43
        on right: 43 44 45
    exclusive_OR_expression <expression> (61)
        on left: 44 45
        on right: 45 46 47
    inclusive_OR_expression <expression> (62)
        on left: 46 47
        on right: 47 50 51
    M <instructionNumber> (63)
        on left: 48
        on right: 51 53 55 126 132 133 134
    N <statement> (64)
        on left: 49
        on right: 55 132 133 134
    logical_AND_expression <expression> (65)
        on left: 50 51
        on right: 51 52 53
    logical_OR_expression <expression> (66)
        on left: 52 53
        on right: 53 54 55
    conditional_expression <expression> (67)
        on left: 54 55
        on right: 55 56 61
    assignment_expression <expression> (68)
        on left: 56 57
        on right: 14 15 57 59 60 87 103
    assignment_operator (69)
        on left: 58
        on right: 57
    expression <expression> (70)
        on left: 59 60
        on right: 5 7 55 60 130 132 133
    constant_expression (71)
        on left: 61
        on right: 113
    declaration (72)
        on left: 62
        on right: 127 135 140 144 145
    init_declarator_list_opt (73)
        on left: 63 64
        on right: 62
    declaration_specifiers (74)
        on left: 65 66
        on right: 62 67 98 99 141
    declaration_specifiers_opt (75)
        on left: 67 68
        on right: 65 66
    init_declarator_list (76)
        on left: 69 70
        on right: 63 70
    init_declarator <symbol> (77)
        on left: 71 72
        on right: 69 70
    type_specifier (78)
        on left: 73 74 75
        on right: 65 76
    specifier_qualifier_list (79)
        on left: 76
        on right: 77 102
    specifier_qualifier_list_opt (80)
        on left: 77 78
        on right: 76
    function_specifier (81)
        on left: 79
        on right: 66
    declarator <symbol> (82)
        on left: 80 81
        on right: 71 72 84 98 141
    change_scope (83)
        on left: 82
        on right: 89 91 122 141
    direct_declarator <symbol> (84)
        on left: 83 84 85 86 87 88 89 90 91
        on right: 80 81 85 86 87 88 89 90 91
    type_qualifier_list_opt (85)
        on left: 92
        on right: 93 94
    pointer <symbolType> (86)
        on left: 93 94
        on right: 80 94
    parameter_type_list (87)
        on left: 95
        on right: 89
    parameter_list (88)
        on left: 96 97
        on right: 95 97
    parameter_declaration (89)
        on left: 98 99
        on right: 96 97
    identifier_list (90)
        on left: 100 101
        on right: 90 101
    type_name (91)
        on left: 102
        on right: 10 11 25
    initialiser <symbol> (92)
        on left: 103 104 105
        on right: 72 106 107
    initialiser_list (93)
        on left: 106 107
        on right: 10 11 104 105 107
    designation_opt (94)
        on left: 108 109
        on right: 106 107
    designation (95)
        on left: 110
        on right: 108
    designator_list (96)
        on left: 111 112
        on right: 110 112
    designator (97)
        on left: 113
        on right: 111 112
    statement <statement> (98)
        on left: 114 115 116 117 118 119
        on right: 120 128 132 133 134 135
    labeled_statement <statement> (99)
        on left: 120
        on right: 114
    change_block (100)
        on left: 121
        on right: 122
    compound_statement <statement> (101)
        on left: 122
        on right: 115
    block_item_list_opt <statement> (102)
        on left: 123 124
        on right: 122 141
    block_item_list <statement> (103)
        on left: 125 126
        on right: 123 126
    block_item <statement> (104)
        on left: 127 128
        on right: 125 126
    expression_statement <expression> (105)
        on left: 129
        on right: 116
    expression_opt <expression> (106)
        on left: 130 131
        on right: 129 134 135 136
    selection_statement <statement> (107)
        on left: 132 133
        on right: 117
    iteration_statement <statement> (108)
        on left: 134 135
        on right: 118
    jump_statement <statement> (109)
        on left: 136
        on right: 119
    translation_unit (110)
        on left: 137 138
        on right: 0 138
    external_declaration (111)
        on left: 139 140
        on right: 137 138
    function_definition (112)
        on left: 141
        on right: 139
    declaration_list_opt (113)
        on left: 142 143
        on right: 141
    declaration_list (114)
        on left: 144 145
        on right: 142 145


State 0

    0 $accept: • translation_unit $end
   62 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   65 declaration_specifiers: • type_specifier declaration_specifiers_opt
   66                       | • function_specifier declaration_specifiers_opt
   73 type_specifier: • VOIDTYPE
   74               | • CHARTYPE
   75               | • INTTYPE
   79 function_specifier: • INLINE
  137 translation_unit: • external_declaration
  138                 | • translation_unit external_declaration
  139 external_declaration: • function_definition
  140                     | • declaration
  141 function_definition: • declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    CHARTYPE  shift, and go to state 1
    INLINE    shift, and go to state 2
    INTTYPE   shift, and go to state 3
    VOIDTYPE  shift, and go to state 4

    declaration             go to state 5
    declaration_specifiers  go to state 6
    type_specifier          go to state 7
    function_specifier      go to state 8
    translation_unit        go to state 9
    external_declaration    go to state 10
    function_definition     go to state 11


State 1

   74 type_specifier: CHARTYPE •

    $default  reduce using rule 74 (type_specifier)


State 2

   79 function_specifier: INLINE •

    $default  reduce using rule 79 (function_specifier)


State 3

   75 type_specifier: INTTYPE •

    $default  reduce using rule 75 (type_specifier)


State 4

   73 type_specifier: VOIDTYPE •

    $default  reduce using rule 73 (type_specifier)


State 5

  140 external_declaration: declaration •

    $default  reduce using rule 140 (external_declaration)


State 6

   62 declaration: declaration_specifiers • init_declarator_list_opt SEMI_COLON
   63 init_declarator_list_opt: • init_declarator_list
   64                         | ε •  [SEMI_COLON]
   69 init_declarator_list: • init_declarator
   70                     | • init_declarator_list COMMA init_declarator
   71 init_declarator: • declarator
   72                | • declarator ASSIGNMENT initialiser
   80 declarator: • pointer direct_declarator
   81           | • direct_declarator
   83 direct_declarator: • IDENTIFIER
   84                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   85                  | • direct_declarator LEFT_SQUARE_BRACKET INTEGER_CONSTANT RIGHT_SQUARE_BRACKET
   86                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   87                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   88                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   89                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   90                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   91                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
   93 pointer: • ASTERISK type_qualifier_list_opt
   94        | • ASTERISK type_qualifier_list_opt pointer
  141 function_definition: declaration_specifiers • declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    IDENTIFIER        shift, and go to state 12
    LEFT_PARENTHESES  shift, and go to state 13
    ASTERISK          shift, and go to state 14

    $default  reduce using rule 64 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 15
    init_declarator_list      go to state 16
    init_declarator           go to state 17
    declarator                go to state 18
    direct_declarator         go to state 19
    pointer                   go to state 20


State 7

   65 declaration_specifiers: • type_specifier declaration_specifiers_opt
   65                       | type_specifier • declaration_specifiers_opt
   66                       | • function_specifier declaration_specifiers_opt
   67 declaration_specifiers_opt: • declaration_specifiers
   68                           | ε •  [IDENTIFIER, COMMA, LEFT_PARENTHESES, ASTERISK, SEMI_COLON, RIGHT_PARENTHESES]
   73 type_specifier: • VOIDTYPE
   74               | • CHARTYPE
   75               | • INTTYPE
   79 function_specifier: • INLINE

    CHARTYPE  shift, and go to state 1
    INLINE    shift, and go to state 2
    INTTYPE   shift, and go to state 3
    VOIDTYPE  shift, and go to state 4

    $default  reduce using rule 68 (declaration_specifiers_opt)

    declaration_specifiers      go to state 21
    declaration_specifiers_opt  go to state 22
    type_specifier              go to state 7
    function_specifier          go to state 8


State 8

   65 declaration_specifiers: • type_specifier declaration_specifiers_opt
   66                       | • function_specifier declaration_specifiers_opt
   66                       | function_specifier • declaration_specifiers_opt
   67 declaration_specifiers_opt: • declaration_specifiers
   68                           | ε •  [IDENTIFIER, COMMA, LEFT_PARENTHESES, ASTERISK, SEMI_COLON, RIGHT_PARENTHESES]
   73 type_specifier: • VOIDTYPE
   74               | • CHARTYPE
   75               | • INTTYPE
   79 function_specifier: • INLINE

    CHARTYPE  shift, and go to state 1
    INLINE    shift, and go to state 2
    INTTYPE   shift, and go to state 3
    VOIDTYPE  shift, and go to state 4

    $default  reduce using rule 68 (declaration_specifiers_opt)

    declaration_specifiers      go to state 21
    declaration_specifiers_opt  go to state 23
    type_specifier              go to state 7
    function_specifier          go to state 8


State 9

    0 $accept: translation_unit • $end
   62 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   65 declaration_specifiers: • type_specifier declaration_specifiers_opt
   66                       | • function_specifier declaration_specifiers_opt
   73 type_specifier: • VOIDTYPE
   74               | • CHARTYPE
   75               | • INTTYPE
   79 function_specifier: • INLINE
  138 translation_unit: translation_unit • external_declaration
  139 external_declaration: • function_definition
  140                     | • declaration
  141 function_definition: • declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    $end      shift, and go to state 24
    CHARTYPE  shift, and go to state 1
    INLINE    shift, and go to state 2
    INTTYPE   shift, and go to state 3
    VOIDTYPE  shift, and go to state 4

    declaration             go to state 5
    declaration_specifiers  go to state 6
    type_specifier          go to state 7
    function_specifier      go to state 8
    external_declaration    go to state 25
    function_definition     go to state 11


State 10

  137 translation_unit: external_declaration •

    $default  reduce using rule 137 (translation_unit)


State 11

  139 external_declaration: function_definition •

    $default  reduce using rule 139 (external_declaration)


State 12

   83 direct_declarator: IDENTIFIER •

    $default  reduce using rule 83 (direct_declarator)


State 13

   80 declarator: • pointer direct_declarator
   81           | • direct_declarator
   83 direct_declarator: • IDENTIFIER
   84                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   84                  | LEFT_PARENTHESES • declarator RIGHT_PARENTHESES
   85                  | • direct_declarator LEFT_SQUARE_BRACKET INTEGER_CONSTANT RIGHT_SQUARE_BRACKET
   86                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   87                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   88                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   89                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   90                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   91                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
   93 pointer: • ASTERISK type_qualifier_list_opt
   94        | • ASTERISK type_qualifier_list_opt pointer

    IDENTIFIER        shift, and go to state 12
    LEFT_PARENTHESES  shift, and go to state 13
    ASTERISK          shift, and go to state 14

    declarator         go to state 26
    direct_declarator  go to state 19
    pointer            go to state 20


State 14

   92 type_qualifier_list_opt: ε •
   93 pointer: ASTERISK • type_qualifier_list_opt
   94        | ASTERISK • type_qualifier_list_opt pointer

    $default  reduce using rule 92 (type_qualifier_list_opt)

    type_qualifier_list_opt  go to state 27


State 15

   62 declaration: declaration_specifiers init_declarator_list_opt • SEMI_COLON

    SEMI_COLON  shift, and go to state 28


State 16

   63 init_declarator_list_opt: init_declarator_list •  [SEMI_COLON]
   70 init_declarator_list: init_declarator_list • COMMA init_declarator

    COMMA  shift, and go to state 29

    $default  reduce using rule 63 (init_declarator_list_opt)


State 17

   69 init_declarator_list: init_declarator •

    $default  reduce using rule 69 (init_declarator_list)


State 18

   62 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   65 declaration_specifiers: • type_specifier declaration_specifiers_opt
   66                       | • function_specifier declaration_specifiers_opt
   71 init_declarator: declarator •  [COMMA, SEMI_COLON]
   72                | declarator • ASSIGNMENT initialiser
   73 type_specifier: • VOIDTYPE
   74               | • CHARTYPE
   75               | • INTTYPE
   79 function_specifier: • INLINE
  141 function_definition: declaration_specifiers declarator • declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET
  142 declaration_list_opt: • declaration_list
  143                     | ε •  [LEFT_CURLY_BRACKET]
  144 declaration_list: • declaration
  145                 | • declaration_list declaration

    CHARTYPE    shift, and go to state 1
    INLINE      shift, and go to state 2
    INTTYPE     shift, and go to state 3
    VOIDTYPE    shift, and go to state 4
    ASSIGNMENT  shift, and go to state 30

    LEFT_CURLY_BRACKET  reduce using rule 143 (declaration_list_opt)
    $default            reduce using rule 71 (init_declarator)

    declaration             go to state 31
    declaration_specifiers  go to state 32
    type_specifier          go to state 7
    function_specifier      go to state 8
    declaration_list_opt    go to state 33
    declaration_list        go to state 34


State 19

   81 declarator: direct_declarator •  [CHARTYPE, INLINE, INTTYPE, VOIDTYPE, ASSIGNMENT, COMMA, LEFT_CURLY_BRACKET, SEMI_COLON, RIGHT_PARENTHESES]
   85 direct_declarator: direct_declarator • LEFT_SQUARE_BRACKET INTEGER_CONSTANT RIGHT_SQUARE_BRACKET
   86                  | direct_declarator • LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   87                  | direct_declarator • LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   88                  | direct_declarator • LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   89                  | direct_declarator • LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   90                  | direct_declarator • LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   91                  | direct_declarator • LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

    LEFT_SQUARE_BRACKET  shift, and go to state 35
    LEFT_PARENTHESES     shift, and go to state 36

    $default  reduce using rule 81 (declarator)


State 20

   80 declarator: pointer • direct_declarator
   83 direct_declarator: • IDENTIFIER
   84                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   85                  | • direct_declarator LEFT_SQUARE_BRACKET INTEGER_CONSTANT RIGHT_SQUARE_BRACKET
   86                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   87                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   88                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   89                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   90                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   91                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

    IDENTIFIER        shift, and go to state 12
    LEFT_PARENTHESES  shift, and go to state 13

    direct_declarator  go to state 37


State 21

   67 declaration_specifiers_opt: declaration_specifiers •

    $default  reduce using rule 67 (declaration_specifiers_opt)


State 22

   65 declaration_specifiers: type_specifier declaration_specifiers_opt •

    $default  reduce using rule 65 (declaration_specifiers)


State 23

   66 declaration_specifiers: function_specifier declaration_specifiers_opt •

    $default  reduce using rule 66 (declaration_specifiers)


State 24

    0 $accept: translation_unit $end •

    $default  accept


State 25

  138 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 138 (translation_unit)


State 26

   84 direct_declarator: LEFT_PARENTHESES declarator • RIGHT_PARENTHESES

    RIGHT_PARENTHESES  shift, and go to state 38


State 27

   93 pointer: • ASTERISK type_qualifier_list_opt
   93        | ASTERISK type_qualifier_list_opt •  [IDENTIFIER, LEFT_PARENTHESES]
   94        | • ASTERISK type_qualifier_list_opt pointer
   94        | ASTERISK type_qualifier_list_opt • pointer

    ASTERISK  shift, and go to state 14

    $default  reduce using rule 93 (pointer)

    pointer  go to state 39


State 28

   62 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON •

    $default  reduce using rule 62 (declaration)


State 29

   70 init_declarator_list: init_declarator_list COMMA • init_declarator
   71 init_declarator: • declarator
   72                | • declarator ASSIGNMENT initialiser
   80 declarator: • pointer direct_declarator
   81           | • direct_declarator
   83 direct_declarator: • IDENTIFIER
   84                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   85                  | • direct_declarator LEFT_SQUARE_BRACKET INTEGER_CONSTANT RIGHT_SQUARE_BRACKET
   86                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   87                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
   88                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   89                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
   90                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   91                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
   93 pointer: • ASTERISK type_qualifier_list_opt
   94        | • ASTERISK type_qualifier_list_opt pointer

    IDENTIFIER        shift, and go to state 12
    LEFT_PARENTHESES  shift, and go to state 13
    ASTERISK          shift, and go to state 14

    init_declarator    go to state 40
    declarator         go to state 41
    direct_declarator  go to state 19
    pointer            go to state 20


State 30
